feat: implement webpack setting

--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@babel/polyfill": "^7.12.1",
     "chart.js": "^2.9.4",
     "moment": "^2.29.1",
+    "node-sass-glob-importer": "^5.3.2",
+    "normalize.css": "^8.0.1",
     "ymaps": "^0.2.1"
   }
 }
