--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "chart.js": "^2.9.4",
+    "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "node-sass-glob-importer": "^5.3.2",
     "normalize.css": "^8.0.1",
