--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "air-datepicker": "^2.2.3",
     "chart.js": "^2.9.4",
     "jquery": "^3.5.1",
