--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     ],
     "rules": {
         "no-plusplus": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "linebreak-style" : "off"
     }
 }
