--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "air-datepicker": "^2.2.3",
     "chart.js": "^2.9.4",
+    "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "node-sass-glob-importer": "^5.3.2",
